Implement run cargo and add dev-wallet.json file inside .gitignore

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 [dependencies]
 solana-client = "2.1.7"
 solana-sdk = "2.1.7"
+
+
+[[bin]]
+name = "sol-rust-xfer"
+path = "src/lib.rs"
