--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ solana-sdk = "1.16.0"
 solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
 
 
-# [[bin]]
-# name = "sol-rust-xfer"
-# path = "src/lib.rs"
+[[bin]]
+name = "sol-rust-xfer"
+path = "src/lib.rs"
